# playground_jp

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
core/: models.py
core/examples/: example.py  parse_elements.py  parse_pdf.py
core/utils/: __init__.py  document_structurer.py  pdf_parser.py
extractor/: base.py  commitment_extractor.py  document_structurizer.py  rca.md
extractor/chat_model/: __init__.py  gemini.py
extractor/examples/: usage.py
identificacion-compromisos -  mejorado/: README.md
identificacion-compromisos -  mejorado/data/processed/datamd/: 117.md  117_copy.md  data_20_raw.md
identificacion-compromisos -  mejorado/source/parsing/: 01_parse_pdf_md.py  02_md_cleaner_mistral.py  02_md_cleaner_mistral_1b.py  03_to_excel1.py
pdf-parser/: pdf_parser.py  requirements.txt
pdf-parser/notebooks/: usage.ipynb
pipeline/: main.py
source/: __init__.py  app.py  dashboard.py  main.py  models.py  schemas.py
source/clasification/: __init__.py  classify_statements.py
source/extraction/: __init__.py  commitments.py
source/parsing/: __init__.py  fix_headings.py  gemini_pdf_parser.py  pdf_parser.py
src/core/: document_parser.py
