[project]
name = "identificacion-de-compromisos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.4",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.18",
    "langchain>=0.3.19",
    "markdown-it-py>=3.0.0",
    "openai>=1.65.1",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.8",
    "tqdm>=4.67.1",
]
